--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     </style>
   </head>
   <body>
+    <div id="messagePanel" style="margin-top: 10px; color: #333; font-weight: bold;"></div>
+
     <canvas id="gameCanvas" width="400" height="400"></canvas>
     <script type="module" src="/src/main.ts"></script>
   </body>
