--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -14,15 +14,26 @@
     </style>
   </head>
   <body>
-    <div id="messagePanel" style="margin-top: 10px; color: #333; font-weight: bold;"></div>
+    <div
+      id="messagePanel"
+      style="margin-top: 10px; color: #333; font-weight: bold"
+    >
+    </div>
 
     <canvas id="gameCanvas" width="400" height="400"></canvas>
-    <div id="info" style="text-align: left; font-family: Inter, sans-serif; font-size: 16px; margin-top: 10px; margin-left: 650px; display: grid; grid-template-columns: 80px auto; gap: 5px;">
-      <strong style="grid-column: span 2;">Operation guide:</strong>
-      <div>[Arrows]</div> <div>Move the player</div>
-      <div>[Enter]</div>  <div>Advance turn</div>
-      <div>[S]</div>      <div>Sow a plant</div>
-      <div>[R]</div>      <div>Reap a plant</div>
+    <div
+      id="info"
+      style="text-align: left; font-family: Inter, sans-serif; font-size: 16px; margin-top: 10px; margin-left: 650px; display: grid; grid-template-columns: 80px auto; gap: 5px"
+    >
+      <strong style="grid-column: span 2">Operation guide:</strong>
+      <div>[Arrows]</div>
+      <div>Move the player</div>
+      <div>[Enter]</div>
+      <div>Advance turn</div>
+      <div>[S]</div>
+      <div>Sow a plant</div>
+      <div>[R]</div>
+      <div>Reap a plant</div>
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
