--- a/index.html
+++ b/index.html
@@ -21,19 +21,25 @@
     </div>
 
     <canvas id="gameCanvas" width="400" height="400"></canvas>
-    <div
-      id="info"
-      style="text-align: left; font-family: Inter, sans-serif; font-size: 16px; margin-top: 10px; margin-left: 650px; display: grid; grid-template-columns: 80px auto; gap: 5px"
-    >
-      <strong style="grid-column: span 2">Operation guide:</strong>
-      <div>[Arrows]</div>
-      <div>Move the player</div>
-      <div>[Enter]</div>
-      <div>Advance turn</div>
-      <div>[S]</div>
-      <div>Sow a plant</div>
-      <div>[R]</div>
-      <div>Reap a plant</div>
+    <div id="info"
+         style="text-align: left; font-family: Inter, sans-serif; font-size: 16px; margin-top: 10px; margin-left: 650px; display: grid; grid-template-columns: 80px auto; gap: 5px">
+        <strong style="grid-column: span 2">Operation guide:</strong>
+        <div>[Arrows]</div>
+        <div>Move the player</div>
+        <div>[P]</div>
+        <div>Plant</div>
+        <div>[H]</div>
+        <div>Harvest</div>
+        <div>[T]</div>
+        <div>Advance Turn</div>
+        <div>[U]</div>
+        <div>Undo</div>
+        <div>[R]</div>
+        <div>Redo</div>
+        <div>[S]</div>
+        <div>Save</div>
+        <div>[L]</div>
+        <div>Load</div>
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
