bug fix for manifest

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="manifest" href="/manifest.json" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Grid-based Farming Game</title>
+    <link rel="manifest" href="/Final-Game-Team-8/manifest.json" />
     <style>
       #gameCanvas {
         display: block;
