All three require language are update.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
       <select id="language">
         <option value="en">English</option>
         <option value="es">Español</option>
+        <option value="zh">中文</option>
+        <option value="ar">العربية</option>
         <!-- Add more languages as needed -->
       </select>
     </div>
